--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -9,6 +9,8 @@
  */
 {
   "current": {
+    "newsletter_popup": false,
+    "newsletter_duration": 10,
     "newsletter_heading": "Newsletter Sign-up",
     "newsletter_text": "This is the built-in newsletter signup pop-up form, which you can customise as required.",
     "sections": {
@@ -39,22 +41,15 @@
         "disabled": false,
         "settings": {}
       },
-      "12168986436008309812": {
-        "type": "shopify://apps/parkour-tiktok-pixel/blocks/threasury_pixel/6c589340-c893-4a7c-ad89-703f18722d60",
-        "disabled": false,
-        "settings": {}
-      },
       "14327677521557774844": {
         "type": "shopify://apps/simprosys-google-shopping-feed/blocks/core_settings_block/1f0b859e-9fa6-4007-97e8-4513aff5ff3b",
         "disabled": false,
         "settings": {}
       },
-      "1530068250781986104": {
-        "type": "shopify://apps/fbp-fast-bundle/blocks/fast_bundle/9e87fbe2-9041-4c23-acf5-322413994cef",
-        "disabled": false,
-        "settings": {
-          "home": false
-        }
+      "7800736727063894098": {
+        "type": "shopify://apps/rez-notify-me/blocks/rez/0da60196-81b6-4270-afac-c9294e1641ba",
+        "disabled": true,
+        "settings": {}
       }
     }
   }
